# bloomrs

./: Cargo.toml  LICENSE_MIT  README.md
src/: lib.rs
tests/: web.rs
