[package]
name = "bloomrs"
version = "0.1.2"
authors = ["Lee Martin <hello@leejohnmartin.co.uk>"]
edition = "2018"
repository = "https://github.com/LeeMartin77/bloomrs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
bloomfilter = "1.0.5"
serde = { version = "1.0.129", features = ["derive"] }
serde_json = "1.0.66"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
